# grpctesting

./: README.md  makefile  package.json
go-src/: go.mod  go.sum
proto/: users.proto
src/: App.svelte
src-go/cmd/: main.go
src-go/pb/: users.pb.go  users_grpc.pb.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build.rs  main.rs
